1.0.3-amalto